tests/compile_fail/error_2.stderr
error[E0271]: type mismatch resolving `<Send<i32, End> as Protocol>::Dual == Send<i32, End>`
  --> tests/compile_fail/error_2.rs:85:40
   |
85 |     verify_dual_protocols(client_chan, server_chan);
   |     ---------------------              ^^^^^^^^^^^ expected `Send<i32, End>`, found `Recv<i32, End>`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected struct `sessrums::proto::Send<i32, sessrums::proto::End>`
              found struct `Recv<i32, sessrums::proto::End>`
note: required by a bound in `verify_dual_protocols`
  --> tests/compile_fail/error_2.rs:95:17
   |
90 | fn verify_dual_protocols<P, Q, IO1, IO2>(_chan1: Chan<P, IO1>, _chan2: Chan<Q, IO2>)
   |    --------------------- required by a bound in this function
...
95 |     Q: Protocol<Dual = P>  // This is the key constraint that should fail
   |                 ^^^^^^^^ required by this bound in `verify_dual_protocols`
